--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,364 @@
-.App {
-  text-align: center;
+/* Reset */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: fantasy;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.each-slide-effect > div {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-size: cover;
+  height: 75rem;
+}
+
+.each-slide-effect span {
+  padding-bottom: 20rem;
+  font-size: 4rem;
   color: white;
+  text-shadow: 0.1rem 0.1rem 10rem black;
+  text-align: center;
+  opacity: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.each-slide-effect .animation-effect {
+  animation: textSlide 6s infinite;
 }
-
-@keyframes App-logo-spin {
+@keyframes textSlide {
   from {
-    transform: rotate(0deg);
+    opacity: 1;
+    transform: scale(1);
   }
   to {
-    transform: rotate(360deg);
+  transform: scale(0.5);
+  opacity: 0;
+    
+  }  
+}
+
+/* Setting our divider and making sure our scroll bar is acessible just in case there is not enough content within the body of our pages */
+html {
+  font-size: 62.5%;
+  height: 101%;
+}
+
+/* .current show us what current page we're on  */
+.current {
+  border-bottom: 0.3rem solid orangered;
+}
+
+/* For our logo */
+span {
+  color: orangered;
+}
+
+/* Flexbox  */
+nav {
+  display: flex; 
+  justify-content: space-around;
+  align-items: center;
+  background: #333;
+  color: #fff;
+  /* position: fixed;
+  width: 100%;
+  /* z-index is used since position fixed places the links behind */
+  /* z-index: 1;   */ 
+
+}
+/* Pushing our logo to the left and making it align with our nav items */
+nav .logo{
+  margin-left: 0.6rem;
+  font-size: 2rem;
+  margin-top: 3rem;
+  animation: slidingLogo 0.9s forwards;
+}
+
+@keyframes slidingLogo {
+  to {
+    margin-left: 0.6rem;
+  }
+  from {
+    margin-left: 20rem;
+  }
+}
+
+/* unordered list being set to column */
+nav ul {
+  display: flex;
+  margin: 0.1rem;
+
+}
+
+nav li {
+margin: 1rem; 
+list-style-type: none;
+}
+
+nav a {
+  color: #fff;
+  font-size: 2rem;
+  text-decoration: none;
+}
+
+/* What holds our slider */
+.container {
+  max-width: 100%;
+  height: 85vh;
+  background: #222;
+}
+
+/* Perserving the aspect ratio */
+.container img {
+  width: 100%; 
+  height: 100%;
+  object-fit: fill;
+}
+
+/* flex; column */
+.about {
+  font-size: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+  text-align: center;
+  background: silver;
+}
+
+.about, .text, p, a {
+  padding-top: 3rem;
+}
+
+.about .text, a {
+  text-decoration: underline orangered;
+}
+
+.about a {
+  color: #000;
+}
+
+.products {
+  padding: 19rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  column-gap: 5rem;
+  text-align: center;
+
+}
+
+
+
+.product-filter {
+  max-width: 100%;
+  position: absolute;
+  top: 11rem;
+  left: 60rem;
+}
+
+
+.product-filter label {
+  font-size: 1.5rem;
+}
+
+.product-filter input {
+  position: absolute;
+  top: 6.9rem;
+  left: -1.5rem;
+  padding: 0.4rem;
+  margin-right: 1rem;
+  outline: none;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: 0.3rem solid black
+}
+
+.products img {
+  width: 40rem;
+  object-fit: contain;
+  box-shadow: 0.5rem 0.3rem 1rem #000;
+}
+
+.products p {
+  font-size: 2rem;
+  color: #000;
+  text-shadow: 0.1rem 0.1rem 0.2rem #fff;
+  
+}
+
+.products .hide_engine_details {
+  display: none;
+}
+
+.product-filter {
+  width: 100px;
+}
+
+.form-container {
+  max-width: 100%;
+  color: #fff;
+  margin: 0 auto;
+  text-shadow: 0.1rem 0.1rem 0.2rem #000;
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(black, silver);
+  padding: 10rem;
+}
+
+
+
+
+/* creating our animation  */
+.form-container .form-text {
+  font-size: 3rem;
+  text-align: center;
+  border-bottom: 0.3rem solid orangered;
+  width: 55%;
+  animation: appear 0.9s ease-in;
+  
+}
+
+
+@keyframes appear{
+  0%{
+   font-size: 0;
+   border-bottom: none;
+  }
+  100%{
+    font-size: 3rem;
+    border-bottom: 0.3rem solid orangered;
+   }
+}
+
+.form-container label {
+  font-size: 2rem;
+  padding-top: 5rem;
+}
+
+.form-container input {
+font-size: 4rem;
+padding-top: 1rem;
+margin-top: 2rem;
+background: transparent;
+border-top: none;
+border-right: none;
+border-left: none;
+border-bottom: 0.3rem solid #000;
+outline: none;
+caret-color: #fff;
+}
+
+.form-container input[type="text"], [type="email"]{
+  color: #fff;
+  text-shadow: 0.1rem 0.1rem 0.5rem #000;
+}
+
+textarea {
+  margin-top: 2rem;
+  height: 20rem;
+  resize: none;
+  outline: none;
+  border: none;
+  border-radius: 0.7rem;
+  font-size: 3rem;
+}
+
+input[type="submit"]{
+  background: #000;
+  color: #fff;
+  border: none;
+  width: 40rem;
+  font-size: 2.5rem;
+  cursor: pointer;
+  border-radius: 0.7rem;
+}
+
+input[type="submit"]:hover{
+  background-color: orangered;
+}
+
+/* Moible */
+@media screen and (min-width: 320px) and (max-width: 425px){
+  body {
+    font-weight: bold;
+  }
+  nav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: static;
+  } 
+  nav .nav-logo {
+    text-align: center;
+  }
+
+  nav ul {
+    margin-right: 2.7rem;
+  }
+  .container img {
+    object-fit: cover;
+  }
+
+  .products {
+   text-align: center;
+
+  }
+
+  .products img {
+    width: 20rem;
+    height: 20rem;
+    object-fit: fill;
+  }
+
+  form .form-text {
+    width: 100%;
+  }
+
+  form input {
+    width: 15rem;
+  }
+
+  textarea {
+    width: 20rem;
+    margin-right: 1.5rem;
+  }
+
+
+
+  input[type="submit"]{
+    width: 80%;
+    margin-left: 1rem;
+  }
+
+  footer nav ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-right: 2.7rem;
+  }
+  footer .logo {
+    text-align: center;
+  }
+}
+
+/* Tablet */
+@media screen and (min-width: 426px) and (max-width: 768px){
+  .products  {
+    text-align: center;
+  }
+  .products img {
+    width: 100%;
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 769px) and (max-width: 1440px){
+  body {
+    font-weight: bolder;
   }
 }
